--- a/lecturenotes/week3notes.html
+++ b/lecturenotes/week3notes.html
@@ -10,6 +10,12 @@
         <a href="http://www.google.com">Google</a><br>
         <!-- relative link
         to a page in the same folder-->
-        <a href="week1notes.html">Week 1 Notes</a>
+        <a href="week1notes.html">Week 1 Notes</a><br>
+        <!-- relative link
+        to a file not in the same folder-->
+        <a href="../lab01/yoo-bio.html">Lab 1</a>
+        <img src="../images/otto.jpeg" alt="otto mascot">
+        
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/IsXEVQRaTX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
 </html>
