--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -44,10 +44,10 @@
         <label for="phone">Phone</label>
         <input type="checkbox" id="phone" name="phone"><br>
 
-        <label for="questions">What is your question or inquiry for contact?</label>
+        <label for="questions">What is your question or inquiry for contact?</label><br>
         <textarea name="questions" id="questions"></textarea><br>
 
-        <label for="contactback">Please leave your contact information.</label>
+        <label for="contactback">Please leave your contact information.</label><br>
         <textarea name="contactback" id="contactback"></textarea><br>
 
     <input type="submit" value="Contact Now">
