--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -25,7 +25,7 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.267964426294!2d-76.1249652846609!3d43.0357931791475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3724ee2f2bb%3A0x4c0b856be205720c!2s827%20Lancaster%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1644510410428!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
     <h1>Contact Me</h1>
-    
+
     <form action="https://formspree.io/f/xrgjqlgq" method="POST">
         <label for="fullname">Full Name</label>
         <input type="text" name="fullname" id="fullname"><br>
@@ -39,7 +39,7 @@
 
         <p>How would you like to be contacted back?</p>
         <label for="email">Email</label>
-        <input type="checkbox" id="email" name="email">
+        <input type="checkbox" id="email" name="email" value="email">
 
         <label for="phone">Phone</label>
         <input type="checkbox" id="phone" name="phone"><br>
