--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -38,8 +38,8 @@
         <input type="radio" id="professor" name="profession"><br>
 
         <p>How would you like to be contacted back?</p>
-        <label for="email">Email</label>
-        <input type="checkbox" id="email" name="email" value="email">
+        <label for="mail">Email</label>
+        <input type="checkbox" id="mail" name="mail">
 
         <label for="phone">Phone</label>
         <input type="checkbox" id="phone" name="phone"><br>
