--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -17,7 +17,7 @@
 
 
     <p>
-        <img src="../images/LI-In-Bug.png" alt="LinkedIn Logo">
+        <img src="../images/logo-sized.png" alt="LinkedIn Logo">
          <a href="http://www.linkedin.com/in/hyejunyoo">My LinkedIn Profile</a>
     
     </p>
