--- a/lab05/contact.html
+++ b/lab05/contact.html
@@ -17,6 +17,7 @@
 
 
     <p>
+        <a href="http://www.linkedin.com/in/hyejunyoo"></a>
         <img src="../images/logo-sized.png" alt="LinkedIn Logo">
          <a href="http://www.linkedin.com/in/hyejunyoo">My LinkedIn Profile</a>
     
