--- a/lab05/contact.html
+++ b/lab05/contact.html
@@ -17,10 +17,10 @@
 
 
     <p>
-        <a href="http://www.linkedin.com/in/hyejunyoo"></a>
+        <a href="http://www.linkedin.com/in/hyejunyoo">
         <img src="../images/logo-sized.png" alt="LinkedIn Logo">
-         <a href="http://www.linkedin.com/in/hyejunyoo">My LinkedIn Profile</a>
-    
+         <a href="http://www.linkedin.com/in/hyejunyoo">My LinkedIn Profile>
+        </a>
     </p>
 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.267964426294!2d-76.1249652846609!3d43.0357931791475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3724ee2f2bb%3A0x4c0b856be205720c!2s827%20Lancaster%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1644510410428!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
