--- a/lab05/contact.html
+++ b/lab05/contact.html
@@ -19,7 +19,7 @@
     <p>
         <a href="http://www.linkedin.com/in/hyejunyoo">
         <img src="../images/logo-sized.png" alt="LinkedIn Logo">
-         <a href="http://www.linkedin.com/in/hyejunyoo">My LinkedIn Profile>
+         <a href="http://www.linkedin.com/in/hyejunyoo">My LinkedIn Profile
         </a>
     </p>
 
