--- a/lab06/skills.html
+++ b/lab06/skills.html
@@ -13,9 +13,9 @@
             <caption>Technical Skills</caption>
             <tr class="evenrow">
             <th class="special">Category</th>
-            <th>Skill</th>
-            <th>Competancy Level</th>
-            <th>Year Learned</th>
+            <th class="special">Skill</th>
+            <th class="special">Competancy Level</th>
+            <th class="special">Year Learned</th>
             </tr>
 
             <tr>
