--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -32,7 +32,7 @@
         </p>
 
         <p>
-            <a href="http://www.linkedin.com/in/hyejunyoo">
+            <a href="http://www.linkedin.com/in/hyejunyoo"></a>
             <img src="../images/logo-sized.png" class="logopic" alt="LinkedIn Logo">
             <a href="http://www.linkedin.com/in/hyejunyoo">My LinkedIn Profile</a>
         </p>
@@ -79,5 +79,4 @@
 
     </div>
     </body>
-
-</html>
+    </html>
