--- a/lab10/index.html
+++ b/lab10/index.html
@@ -43,7 +43,7 @@
         </ul>
         </main>
         <p>
-            <header><img src="../images/bio-pic" alt="Bio pic"></header>
+            <header><img class="bannerpic" src="../images/bio-pic" alt="Bio pic"></header>
         </p>
 
         <footer>
