--- a/lab10/index.html
+++ b/lab10/index.html
@@ -13,8 +13,8 @@
 
         <body>
             <nav>
-                <a href="../lab07/index.html">Home</a> |
-                <a href="../lab07/skills.html">Skills</a> |
+                <a href="../lab07/index.html">Home</a><span>|</span>
+                <a href="../lab07/skills.html">Skills</a><span>|</span>
                 <a href="../lab07/contact.html">Contact</a>
             </nav>
         <h1>Hyejun Yoo's Biography</h1>
