--- a/lab10/skills.html
+++ b/lab10/skills.html
@@ -11,8 +11,8 @@
     </head>
     <body>
         <nav>
-            <a href="../lab07/index.html">Home</a> |
-            <a href="../lab07/skills.html">Skills</a> |
+            <a href="../lab07/index.html">Home</a><span>|</span>
+            <a href="../lab07/skills.html">Skills</a><span>|</span>
             <a href="../lab07/contact.html">Contact</a>
         </nav>
 
