--- a/lab10/index.html
+++ b/lab10/index.html
@@ -42,9 +42,8 @@
             <li>Knowledge in Python, SQL, R</li>
         </ul>
         </main>
-        <p>
-            <header><img class="bannerpic" src="../images/bio-pic" alt="Bio pic"></header>
-        </p>
+        
+        <p><header><img class="bannerpic" src="../images/bio-pic" alt="Bio pic"></header></p>
 
         <footer>
         <hr>
