--- a/lab10/index.html
+++ b/lab10/index.html
@@ -43,7 +43,9 @@
         </ul>
         </main>
         
-        <p><header><img class="bannerpic" src="../images/bio-pic" alt="Bio pic"></header></p>
+        <p>
+            <header><img class="bannerpic" src="../images/bio-pic" alt="Bio pic"></header>
+        </p>
 
         <footer>
         <hr>
