--- a/project/home.html
+++ b/project/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="/project/home.html">Home</a>
+        <a href="project/home.html">Home</a>
         <a href="project/timeline.html">Timeline</a>
         <a href="project/rebranding.html">Rebranding</a>
     </nav>
