--- a/project/rebranding.html
+++ b/project/rebranding.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <nav>
-        <a href="project/home.html">Home</a>
-        <a href="project/timeline.html">Timeline</a>
-        <a href="project/rebranding.html">Rebranding</a>
+        <a href="home.html">Home</a>
+        <a href="timeline.html">Timeline</a>
+        <a href="rebranding.html">Rebranding</a>
     </nav>
 
     <h1>Rebranding Page</h1>
