--- a/project/timeline.html
+++ b/project/timeline.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <nav>
-        <a href="home.html">Home</a>
-        <a href="timeline.html">Timeline</a>
-        <a href="rebranding.html">Rebranding</a>
+        <a href="/project/home.html">Home</a>
+        <a href="/project/timeline.html">Timeline</a>
+        <a href="/project/rebranding.html">Rebranding</a>
     </nav>
 
     <h1>Rebranding/Collaboration/Future of Kewpies Page</h1>
