--- a/project/home.html
+++ b/project/home.html
@@ -9,8 +9,8 @@
 <body>
     <nav>
         <a href="../project/home.html">Home</a>
-        <a href="/project/timeline.html">Timeline</a>
-        <a href="/project/rebranding.html">Rebranding</a>
+        <a href="../project/timeline.html">Timeline</a>
+        <a href="../project/rebranding.html">Rebranding</a>
     </nav>
 
     <h1>Home Page</h1>
