--- a/project/rebranding.html
+++ b/project/rebranding.html
@@ -13,7 +13,7 @@
         <a href="../project/rebranding.html">Rebranding</a>
     </nav>
 
-    <h1>Rebranding Page</h1>
+    <h1>The Rebranding of Kewpie</h1>
     <p>
         The cultural impact of Kewpies can be felt even to this day. There are numerous Kewpie doll collectors and aficionados around the world. The city of Branson, Missouri, where Rose O’Neill retired in, holds a “Kewpiesta” every year to commemorate the icon that is the Kewpie character. There is also the Bonniebrook Homestead in Missouri. The Bonniebrook Homestead is a museum dedicated to Rose O’Neill’s famous life and legacy. The museum holds Kewpie collectibles such as dolls, comic strips of the original illustrations, dishes, and more on display.<br>
 
