--- a/project/rebranding.html
+++ b/project/rebranding.html
@@ -22,19 +22,19 @@
         In present times, the Kewpie character has transformed into other iterations and brandings. For example, a more modern version of the Kewpie is the Sonny Angel brand originated in Japan. These are essentially similar to Kewpie dolls with their angelic features. Sonny Angel figurines are a popular collector’s item. Kewpie dolls have also had a rich history of collaborations and features with other brands. As mentioned before, there has been the Kewpie Mayo branding that popularized Kewpie in industries that were not predicted before.<br>
         <ul>
             <li>There have been other Kewpie brand collaborations such as Tarako Spaghetti.</li>
-            <li>There have also been various characters that have adopted the Kewpie look such as<br>
+            <li>There have also been various characters that have adopted the Kewpie look such as
             Disney characters and Japanese anime characters.</li>
-            <li>The Kewpie doll’s popularity can be found on social media platforms such as Instagram,<br></li>Pinterest, and TikTok, with collectors showing off their meticulously displayed collections and their<br>appreciation for Kewpie dolls.
+            <li>The Kewpie doll’s popularity can be found on social media platforms such as Instagram,
+            </li>Pinterest, and TikTok, with collectors showing off their meticulously displayed collections and their
+            appreciation for Kewpie dolls.
         </ul>
 
-    </p>
 
-    <p>
         <img src="images/tarakogroup.jpg" alt="Group of Tarako Kewpie dolls">
         <img src="images/mytarako.jpg" alt="Tarako Kewpie doll">
         <img src="images/mayo.jpg" alt="Kewpie Mayonnaise">
         
         <a href="https://www.tiktok.com/@hotariesboy/video/7070561157093903658?is_from_webapp=1&sender_device=pc&web_id6957052393264449030">TikTok about Kewpies</a>
-    </p>
+
 </body>
 </html>
