--- a/project/rebranding.html
+++ b/project/rebranding.html
@@ -24,9 +24,8 @@
             <li>There have been other Kewpie brand collaborations such as Tarako Spaghetti.</li>
             <li>There have also been various characters that have adopted the Kewpie look such as
             Disney characters and Japanese anime characters.</li>
-            <li>The Kewpie doll’s popularity can be found on social media platforms such as Instagram,
-            </li>Pinterest, and TikTok, with collectors showing off their meticulously displayed collections and their
-            appreciation for Kewpie dolls.
+            <li>The Kewpie doll’s popularity can be found on social media platforms such as Instagram,</li>
+            <li>Pinterest, and TikTok, with collectors showing off their meticulously displayed collections and their appreciation for Kewpie dolls.</li>
         </ul>
 
 
