--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -33,8 +33,8 @@
         </p>
 
         <p>
-            <a href="http://www.linkedin.com/in/hyejunyoo"></a>
-            <img src="../images/logo-sized.png" class="logopic" alt="LinkedIn Logo">
+            <a href="http://www.linkedin.com/in/hyejunyoo">
+            <img src="../images/logo-sized.png" class="logopic" alt="LinkedIn Logo"></a>
             <a href="http://www.linkedin.com/in/hyejunyoo">My LinkedIn Profile</a>
         </p>
         <div class="clear"></div>
