--- a/project6/timeline.html
+++ b/project6/timeline.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visual Timeline of Kewpie Dolls</title>
     <link rel="stylesheet" href="../project6/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&family=Rubik+Glitch&family=Rubik+Moonrocks&family=Rubik+Puddles&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
