--- a/project6/timeline.html
+++ b/project6/timeline.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="../project6/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&family=Poppins:wght@100;200;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&family=Poppins:ital,wght@0,100;0,200;0,400;1,200&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Kewpies</h1>
