--- a/project6/timeline.html
+++ b/project6/timeline.html
@@ -11,25 +11,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&family=Poppins:ital,wght@0,100;0,200;0,400;1,200&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Kewpies</h1>
     <nav>
         <a href="../project/home.html">Home</a>
         <a href="../project/timeline.html">Timeline</a>
         <a href="../project/rebranding.html">Rebranding</a>
     </nav>
     
-    <h2>Visual Timeline of Kewpie Dolls</h1>
+    <h2>Visual Timeline of Kewpie Dolls</h2>
     <p>
         When one sees a Kewpie, they see the visual figure of cuteness and naivety. Kewpies are child-like, elf-ish, almost angelic beings. Rose O’Neill created the Kewpie character to bring more laughter and fun into the world. After the initial success of O’Neill’s comic strip, the Kewpie character began to be produced as physical dolls and toys for the public. They became to be produced in German factories. The first Kewpie dolls were produced as bisque dolls, and then they were produced as celluloid dolls. Then later they began to be mass produced as hard plastic dolls. Today, there are various and numerous production material types for Kewpie dolls and the original types are a rare but special find for Kewpie collectors. There are even plush versions of Kewpie dolls! Here is a visual timeline of how Kewpie dolls’ appearances have transformed over time.
     </p>
 
     <p>
+        <div class="content">
         <img src="images/celluloid.jpg" alt="Young girl holding celluloid Kewpie doll">
-        <img src="images/group2.jpg" alt="Group of Kewpie dolls">
-        <img src="images/plastic1.jpg" alt="Plastic Kewpie doll">
         <img src="images/antique1.jpg" alt="Antique Kewpie dolls at antique store">
         <img src="images/antique2.jpg" alt="Antique Kewpie dolls at antique store">
 
         <a href="https://www.tiktok.com/@mallratwriter/video/7019711658364882181">TikTok about Kewpies</a>
+
+        </div>
+        
+        <div class="content2">
+            <img src="images/group2.jpg" alt="Group of Kewpie dolls">
+            <img src="images/plastic1.jpg" alt="Plastic Kewpie doll">
+        </div>
 </body>
 </html>
