--- a/project6/timeline.html
+++ b/project6/timeline.html
@@ -24,17 +24,16 @@
 
     <p>
         <div class="content">
-        <img src="images/celluloid.jpg" alt="Young girl holding celluloid Kewpie doll">
-        <img src="images/antique1.jpg" alt="Antique Kewpie dolls at antique store">
-        <img src="images/antique2.jpg" alt="Antique Kewpie dolls at antique store">
+        <p><img src="images/celluloid.jpg" alt="Young girl holding celluloid Kewpie doll">A young girl holding a celluloid Kewpie doll.</p>
+        <p><img src="images/antique1.jpg" alt="Antique Kewpie dolls at antique store">Antique Kewpie dolls.</p>
+        <p><img src="images/antique2.jpg" alt="Antique Kewpie dolls at antique store">More antique Kewpie dolls.</p>
 
         <a href="https://www.tiktok.com/@mallratwriter/video/7019711658364882181">TikTok about Kewpies</a>
-
         </div>
         
         <div class="content2">
-            <img src="images/group2.jpg" alt="Group of Kewpie dolls">
-            <img src="images/plastic1.jpg" alt="Plastic Kewpie doll">
+            <p><img src="images/group2.jpg" alt="Group of Kewpie dolls">An assorted group of Kewpie dolls, made of plastic.</p>
+            <p><img src="images/plastic1.jpg" alt="Plastic Kewpie doll">A Kewpie doll made of plastic.</p>
         </div>
 </body>
 </html>
