--- a/project6/timeline.html
+++ b/project6/timeline.html
@@ -11,15 +11,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&family=Poppins:ital,wght@0,100;0,200;0,400;1,200&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header>Kewpie
     <nav>
         <a href="../project/home.html">Home</a>
         <a href="../project/timeline.html">Timeline</a>
         <a href="../project/rebranding.html">Rebranding</a>
     </nav>
-    
+    </header>
+
     <h2>Visual Timeline of Kewpie Dolls</h2>
     <p>
-        When one sees a Kewpie, they see the visual figure of cuteness and naivety. Kewpies are child-like, elf-ish, almost angelic beings. Rose O’Neill created the Kewpie character to bring more laughter and fun into the world. After the initial success of O’Neill’s comic strip, the Kewpie character began to be produced as physical dolls and toys for the public. They became to be produced in German factories. The first Kewpie dolls were produced as bisque dolls, and then they were produced as celluloid dolls. Then later they began to be mass produced as hard plastic dolls. Today, there are various and numerous production material types for Kewpie dolls and the original types are a rare but special find for Kewpie collectors. There are even plush versions of Kewpie dolls! Here is a visual timeline of how Kewpie dolls’ appearances have transformed over time.
+        When one sees a Kewpie, they see the visual figure of cuteness and naivety. Kewpies are child-like, elf-ish, almost angelic beings. Rose O’Neill created the Kewpie character to bring more laughter and fun into the world. After the initial success of O’Neill’s comic strip, the Kewpie character began to be produced as physical dolls and toys for the public. They became to be produced in German factories. 
+        </p>
+        <p>
+        The first Kewpie dolls were produced as bisque dolls, and then they were produced as celluloid dolls. Then later they began to be mass produced as hard plastic dolls. Today, there are various and numerous production material types for Kewpie dolls and the original types are a rare but special find for Kewpie collectors. There are even plush versions of Kewpie dolls! Here is a visual timeline of how Kewpie dolls’ appearances have transformed over time.
     </p>
 
     <p>
@@ -32,7 +37,7 @@
         </div>
         
         <div class="content2">
-            <p><img src="images/group2.jpg" alt="Group of Kewpie dolls">An assorted group of Kewpie dolls, made of plastic.</p>
+            <p><img src="images/group2.jpg" alt="Group of Kewpie dolls">An assorted group of Kewpie dolls, made of plastic. The newer models are the Sonny Angel plastic dolls.</p>
             <p><img src="images/plastic1.jpg" alt="Plastic Kewpie doll">A Kewpie doll made of plastic.</p>
         </div>
 </body>
