--- a/project6/timeline.html
+++ b/project6/timeline.html
@@ -13,9 +13,9 @@
 <body>
     <header>Kewpie
     <nav>
-        <a href="../project/home.html">Home</a>
-        <a href="../project/timeline.html">Timeline</a>
-        <a href="../project/rebranding.html">Rebranding</a>
+        <a href="../project/home.html">Home</a><span>/</span>
+        <a href="../project/timeline.html">Timeline</a><span>/</span>
+        <a href="../project/rebranding.html">Rebranding</a><span>/</span>
     </nav>
     </header>
 
