--- a/project6/timeline.html
+++ b/project6/timeline.html
@@ -11,7 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&family=Poppins:ital,wght@0,100;0,200;0,400;1,200&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>Kewpie
+    <header>
+    <p>Kewpie</p>
+    <img src="images/logo2.png" alt="Kewpie icon">
     <nav>
         <a href="../project/home.html">Home</a><span>/</span>
         <a href="../project/timeline.html">Timeline</a><span>/</span>
