--- a/project6/timeline.html
+++ b/project6/timeline.html
@@ -12,9 +12,8 @@
 </head>
 <body>
     <header>
-    <p>Kewpie</p>
-    <img src="images/logo2.png" alt="Kewpie icon">
-    <nav>
+        Kewpie
+        <nav>
         <a href="../project/home.html">Home</a><span>/</span>
         <a href="../project/timeline.html">Timeline</a><span>/</span>
         <a href="../project/rebranding.html">Rebranding</a><span>/</span>
