--- a/project6/timeline.html
+++ b/project6/timeline.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../project6/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&family=Poppins:ital,wght@0,100;0,200;0,400;1,200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Ms+Madi&family=Poppins:ital,wght@0,100;0,200;0,400;1,200&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -31,15 +31,15 @@
 
     <div class="content">
         <div>
-            <p><img src="images/celluloid.jpg" alt="Young girl holding celluloid Kewpie doll">A young girl holding a celluloid Kewpie doll.
+            <p><img src="images/celluloid2.2.jpg" alt="Young girl holding celluloid Kewpie doll">A young girl holding a celluloid Kewpie doll.
             </p>
         </div>
         <div>
-            <p><img src="images/antique1.jpg" alt="Antique Kewpie dolls at antique store">Antique Kewpie dolls.
+            <p><img src="images/antique1.2.jpg" alt="Antique Kewpie dolls at antique store">Antique Kewpie dolls.
             </p>
         </div>
         <div>
-            <p><img src="images/antique2.jpg" alt="Antique Kewpie dolls at antique store">More antique Kewpie dolls.
+            <p><img src="images/antique2.2.jpg" alt="Antique Kewpie dolls at antique store">More antique Kewpie dolls.
             </p>
         </div>
 
@@ -48,10 +48,10 @@
         
         <div class="content2">
             <div>
-                <p><img src="images/group2.jpg" alt="Group of Kewpie dolls">An assorted group of Kewpie dolls, made of plastic. The newer models are the Sonny Angel plastic dolls.</p>
+                <p><img src="images/group2.2.jpg" alt="Group of Kewpie dolls">An assorted group of Kewpie dolls, made of plastic. The newer models are the Sonny Angel plastic dolls.</p>
             </div>
             <div>
-                <p><img src="images/plastic1.jpg" alt="Plastic Kewpie doll">A Kewpie doll made of plastic.</p>
+                <p><img src="images/plastic1.2.jpg" alt="Plastic Kewpie doll">A Kewpie doll made of plastic.</p>
             </div>
         </div>
 </body>
