--- a/project6/timeline.html
+++ b/project6/timeline.html
@@ -26,32 +26,43 @@
     </p>
 
     <p>
-        The first Kewpie dolls were produced as bisque dolls, and then they were produced as celluloid dolls. Then later they began to be mass produced as hard plastic dolls. Today, there are various and numerous production material types for Kewpie dolls and the original types are a rare but special find for Kewpie collectors. There are even plush versions of Kewpie dolls! Here is a visual timeline of how Kewpie dolls’ appearances have transformed over time.
+        The first Kewpie dolls were produced as bisque dolls, and then they were produced as celluloid dolls. Then later they began to be mass produced as hard plastic dolls. Today, there are various and numerous production material types for Kewpie dolls and the original types are a rare but special find for Kewpie collectors. There are even plush versions of Kewpie dolls! Here is a visual timeline of how Kewpie dolls’ appearances have changed, and how they may look today.
     </p>
 
     <div class="content">
         <div>
-            <p><img src="images/celluloid2.2.jpg" alt="Young girl holding celluloid Kewpie doll">A young girl holding a celluloid Kewpie doll.
-            </p>
+            <figure>
+            <img src="images/celluloid2.2.jpg" alt="Young girl holding celluloid Kewpie doll">
+            <figcaption>A young girl holding a celluloid Kewpie doll.</figcaption>
+            </figure>
         </div>
         <div>
-            <p><img src="images/antique1.2.jpg" alt="Antique Kewpie dolls at antique store">Antique Kewpie dolls.
-            </p>
+            <figure>
+            <img src="images/antique1.2.jpg" alt="Antique Kewpie dolls at antique store">
+            <figcaption>Antique Kewpie dolls.</figcaption>
+            </figure>
         </div>
         <div>
-            <p><img src="images/antique2.2.jpg" alt="Antique Kewpie dolls at antique store">More antique Kewpie dolls.
-            </p>
+            <figure>
+            <img src="images/antique2.2.jpg" alt="Antique Kewpie dolls at antique store">
+            <figcaption>More antique Kewpie dolls.</figcaption>
+            </figure>
         </div>
 
-        <a href="https://www.tiktok.com/@mallratwriter/video/7019711658364882181">TikTok about Kewpies</a>
+        <!--<a href="https://www.tiktok.com/@mallratwriter/video/7019711658364882181">TikTok about Kewpies</a>-->
         </div>
         
         <div class="content2">
             <div>
-                <p><img src="images/group2.2.jpg" alt="Group of Kewpie dolls">An assorted group of Kewpie dolls, made of plastic. The newer models are the Sonny Angel plastic dolls.</p>
+                <figure>
+                <img src="images/group2.2.jpg" alt="Group of Kewpie dolls">
+                <figcaption>An assorted group of Kewpie dolls, made of plastic.</figcaption> 
+                </figure>
             </div>
             <div>
-                <p><img src="images/plastic1.2.jpg" alt="Plastic Kewpie doll">A Kewpie doll made of plastic.</p>
+                <figure>
+                <img src="images/plastic1.2.jpg" alt="Plastic Kewpie doll">
+                <figcaption>A Kewpie doll made of plastic.</figcaption></figure>
             </div>
         </div>
 </body>
