--- a/project7/home.html
+++ b/project7/home.html
@@ -8,11 +8,11 @@
     <title>The History of Kewpie Dolls</title>
     <script>
         function SlideShowOn () {
-            document.getElementById('slidepic1').setAttribute('img','/images/group1.jpg');
+            document.getElementById('slidepic1').setAttribute("images/group1.jpg");
         }
 
         function SlideShowOff () {
-            document.getElementById('slidepic2').setAttribute('img','/images/kewpie1.JPG');
+            document.getElementById('slidepic2').setAttribute("images/kewpie1.JPG");
         }
     </script>
 
