--- a/project7/home.html
+++ b/project7/home.html
@@ -7,12 +7,13 @@
 
     <title>The History of Kewpie Dolls</title>
     <script>
-        function SlideShowOn () {
-            document.getElementById('slidepic1').setAttribute("images/group1.jpg");
+        function SlideShowChange () {
+            document.getElementById("slideshow1").setAttribute('src',"https://hyoo04-su.github.io/ist263/project7/images/kewpie1.JPG");
         }
 
-        function SlideShowOff () {
-            document.getElementById('slidepic2').setAttribute("images/kewpie1.JPG");
+        function SlideShowChangeBack () {
+            document.getElementById("slideshow1").setAttribute('src',"https://hyoo04=su.github.io/ist263/project7/images/group1.jpg");
+
         }
     </script>
 
@@ -32,7 +33,7 @@
     </header>
     <h2>The History of Kewpie Dolls</h2>
 
-    <img class="homegroup" src="images/group1.jpg" alt="Group of Kewpie dolls" id="slidepic1" onmousover="SlideShowOn();" onmouseout="SlideShowOff();">
+    <img class="homegroup" src="images/group1.jpg" alt="Group of Kewpie dolls" id="slideshow1" onmouseover="SlideShowChange();" onmouseout="SlideShowChangeBack();">
     
     <p>
         The world of Kewpie dolls is one of wonder and imagination. Kewpie is a character created by famed American illustrator Rose O’Neill in 1909 and they were first featured as illustrations in the magazine Ladies’ Home Journal. O’Neill was the first woman in the United States to create comic strips. The Kewpie figure was depicted among her other original creations in these comic strips. The Kewpie was named after the Roman god of love, Cupid, and they become very popular. The illustrations then led to the creation of Kewpie dolls, which were first made from bisque and then later celluloid. The company Effanbee produced the first hard plastic Kewpie doll. There have also been Kewpie dolls made from softer rubber and vinyl.<br>
@@ -56,11 +57,23 @@
         Rose O’Neill was also an avid woman’s suffrage activist and she illustrated Kewpie dolls fighting for the Nineteenth Amendment to the Constitution, offering an unexpected side of Kewpies advocating for modern change. And during the production of Kewpie dolls, O’Neill fought for the dolls to be affordable for all children no matter their economic status. As the highest paid female illustrator in the U.S., O’Neill continued to fight for feminist politics and activism until her retirement and death. Coupled with the societal impact of Rose O’Neill’s unprecedented activism and affinity for social change through adorable figures such as Kewpie dolls, the Kewpie doll branding brings about many different connotations for collectors and new fans worldwide.
     </p>
 
-        <img src="images/illo2.jpg" alt="Illustration of Kewpie on sparrow">
-        <img src="images/greetingsillo.jpg" alt="Greetings illustration of Kewpie">
-        <img src="images/illo3.jpg" alt="Votes for Women Kewpie Illustration">
-        <img src="images/kewpie2.jpg" alt="Group of Kewpie dolls">
-        <img src="images/kewpie1.JPG" alt="Group of Kewpie dolls" id="slidepic2">
+    <div class="homecontent">
+        <div>
+            <img src="images/illo2.jpg" alt="Illustration of Kewpie on sparrow">
+        </div>
+        <div>
+            <img src="images/greetingsillo.jpg" alt="Greetings illustration of Kewpie">
+        </div>
+        <div>
+            <img src="images/illo3.jpg" alt="Votes for Women Kewpie Illustration">
+        </div>
+        <div>
+            <img src="images/kewpie2.jpg" alt="Group of Kewpie dolls">
+        </div>
+        <div>
+            <img src="images/kewpie1.JPG" alt="Group of Kewpie dolls" id="slideshow2">
+        </div>
+    </div>
 
         <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@tinyloophole/video/6857277702693604614" data-video-id="6857277702693604614" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@tinyloophole" href="https://www.tiktok.com/@tinyloophole">@tinyloophole</a> Kewpie History lesson part 1! Like for part 2! ☺️ <a title="kewpies" target="_blank" href="https://www.tiktok.com/tag/kewpies">#kewpies</a> <a title="kewpiedoll" target="_blank" href="https://www.tiktok.com/tag/kewpiedoll">#kewpiedoll</a> <a title="specialinterest" target="_blank" href="https://www.tiktok.com/tag/specialinterest">#specialinterest</a> <a title="kewpietattoo" target="_blank" href="https://www.tiktok.com/tag/kewpietattoo">#kewpietattoo</a> <a title="history" target="_blank" href="https://www.tiktok.com/tag/history">#history</a> <a title="tattooartist" target="_blank" href="https://www.tiktok.com/tag/tattooartist">#tattooartist</a> <a title="tattooapprentice" target="_blank" href="https://www.tiktok.com/tag/tattooapprentice">#tattooapprentice</a> <a title="dolls" target="_blank" href="https://www.tiktok.com/tag/dolls">#dolls</a> <a target="_blank" title="♬ original sound - Abi pop" href="https://www.tiktok.com/music/original-sound-6781041929989081862">♬ original sound - Abi pop</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
 </body>
