--- a/project7/home.html
+++ b/project7/home.html
@@ -59,19 +59,29 @@
 
     <div class="homecontent">
         <div>
+            <figure>
             <img src="images/illo2.jpg" alt="Illustration of Kewpie on sparrow">
+            </figure>
         </div>
         <div>
+            <figure>
             <img src="images/greetingsillo.jpg" alt="Greetings illustration of Kewpie">
+            </figure>
         </div>
         <div>
+            <figure>
             <img src="images/illo3.jpg" alt="Votes for Women Kewpie Illustration">
+            </figure>
         </div>
         <div>
+            <figure>
             <img src="images/kewpie2.jpg" alt="Group of Kewpie dolls">
+            </figure>
         </div>
         <div>
+            <figure>
             <img src="images/kewpie1.JPG" alt="Group of Kewpie dolls" id="slideshow2">
+            </figure>
         </div>
     </div>
 
