--- a/project7/home.html
+++ b/project7/home.html
@@ -12,7 +12,7 @@
         }
 
         function SlideShowChangeBack () {
-            document.getElementById("slideshow1").setAttribute('src',"https://hyoo04=su.github.io/ist263/project7/images/group1.jpg");
+            document.getElementById("slideshow1").setAttribute('src',"https://hyoo04-su.github.io/ist263/project7/images/group1.jpg");
 
         }
     </script>
@@ -25,6 +25,8 @@
 <body>
     <header>
     Kewpie
+    <img class="icon" src="images/kewpieicon.png">
+    
     <nav>
         <a href="../project7/home.html">Home</a><span>/</span>
         <a href="../project7/timeline.html">Timeline</a><span>/</span>
@@ -33,7 +35,12 @@
     </header>
     <h2>The History of Kewpie Dolls</h2>
 
+    <figure class="slideshowpics">
     <img class="homegroup" src="images/group1.jpg" alt="Group of Kewpie dolls" id="slideshow1" onmouseover="SlideShowChange();" onmouseout="SlideShowChangeBack();">
+    <figcaption>
+        Kewpies everywhere!
+    </figcaption>
+    </figure>
     
     <p>
         The world of Kewpie dolls is one of wonder and imagination. Kewpie is a character created by famed American illustrator Rose O’Neill in 1909 and they were first featured as illustrations in the magazine Ladies’ Home Journal. O’Neill was the first woman in the United States to create comic strips. The Kewpie figure was depicted among her other original creations in these comic strips. The Kewpie was named after the Roman god of love, Cupid, and they become very popular. The illustrations then led to the creation of Kewpie dolls, which were first made from bisque and then later celluloid. The company Effanbee produced the first hard plastic Kewpie doll. There have also been Kewpie dolls made from softer rubber and vinyl.<br>
@@ -76,11 +83,6 @@
         <div>
             <figure>
             <img src="images/kewpie2.jpg" alt="Group of Kewpie dolls">
-            </figure>
-        </div>
-        <div>
-            <figure>
-            <img src="images/kewpie1.JPG" alt="Group of Kewpie dolls" id="slideshow2">
             </figure>
         </div>
     </div>
