--- a/project7/timeline.html
+++ b/project7/timeline.html
@@ -15,6 +15,7 @@
 <body>
     <header>
         Kewpie
+        <img class="icon" src="images/kewpieicon.png">
         <nav>
         <a href="../project7/home.html">Home</a><span>/</span>
         <a href="../project7/timeline.html">Timeline</a><span>/</span>
