--- a/project7/home.html
+++ b/project7/home.html
@@ -24,9 +24,12 @@
 </head>
 <body>
     <header>
-    Kewpie
-    <img class="icon" src="images/kewpieicon.png">
-    
+        <div>
+            Kewpie
+            <a href="../project7/home.html"><img class="icon" src="images/kewpieicon.png">
+            </a>
+        </div>
+        
     <nav>
         <a href="../project7/home.html">Home</a><span>/</span>
         <a href="../project7/timeline.html">Timeline</a><span>/</span>
