--- a/project7/rebranding.html
+++ b/project7/rebranding.html
@@ -13,8 +13,11 @@
 </head>
 <body>
     <header>
-    Kewpie
-    <img class="icon" src="images/kewpieicon.png">
+        <div>
+            Kewpie
+            <a href="../project7/home.html"><img class="icon" src="images/kewpieicon.png">
+            </a>
+        </div>
 
     <nav>
         <a href="../project7/home.html">Home</a><span>/</span>
