--- a/project7/home.html
+++ b/project7/home.html
@@ -29,7 +29,7 @@
             <a href="../project7/home.html"><img class="icon" src="images/kewpieicon.png">
             </a>
         </div>
-        
+
     <nav>
         <a href="../project7/home.html">Home</a><span>/</span>
         <a href="../project7/timeline.html">Timeline</a><span>/</span>
@@ -41,7 +41,7 @@
     <figure class="slideshowpics">
     <img class="homegroup" src="images/group1.jpg" alt="Group of Kewpie dolls" id="slideshow1" onmouseover="SlideShowChange();" onmouseout="SlideShowChangeBack();">
     <figcaption>
-        Kewpies everywhere!
+        Hover for Kewpies everywhere!
     </figcaption>
     </figure>
     
