--- a/project7/home.html
+++ b/project7/home.html
@@ -70,22 +70,22 @@
     <div class="homecontent">
         <div>
             <figure>
-            <img src="images/illo2.jpg" alt="Illustration of Kewpie on sparrow">
+            <img class="illo1" src="images/illo2.jpg" alt="Illustration of Kewpie on sparrow">
             </figure>
         </div>
         <div>
             <figure>
-            <img src="images/greetingsillo.jpg" alt="Greetings illustration of Kewpie">
+            <img class="illo2" src="images/greetingsillo.jpg" alt="Greetings illustration of Kewpie">
             </figure>
         </div>
         <div>
             <figure>
-            <img src="images/illo3.jpg" alt="Votes for Women Kewpie Illustration">
+            <img class="illo3" src="images/illo3.jpg" alt="Votes for Women Kewpie Illustration">
             </figure>
         </div>
         <div>
             <figure>
-            <img src="images/kewpie2.jpg" alt="Group of Kewpie dolls">
+            <img class="homegroupfinal" src="images/kewpie2.jpg" alt="Group of Kewpie dolls">
             </figure>
         </div>
     </div>
