--- a/project7/home.html
+++ b/project7/home.html
@@ -26,7 +26,7 @@
     <header>
         <div>
             Kewpie
-            <a href="../project7/home.html"><img class="icon" src="images/kewpieicon.png">
+            <a href="../project7/home.html"><img class="icon" src="images/kewpieicon.png" alt="Kewpie icon">
             </a>
         </div>
 
