--- a/project7/home.html
+++ b/project7/home.html
@@ -50,13 +50,13 @@
         Other than dolls, there have been:<br>
         <ul class="homelist">
             <li>Jell-O</li>
-            <li>cameras</li>
-            <li>mayonnaise</li>
-            <li>door knockers</li>
-            <li>postcards</li>
-            <li>greeting cards</li> 
-            <li>tea sets </li>
-            <li>and other paraphernalia</li> 
+            <li>Cameras</li>
+            <li>Mayonnaise</li>
+            <li>Door knockers</li>
+            <li>Postcards</li>
+            <li>Greeting cards</li> 
+            <li>Tea sets </li>
+            <li>And other paraphernalia</li> 
     
         </ul>
         of the Kewpie character that people today can collect and enjoy.<br>
