--- a/project7/timeline.html
+++ b/project7/timeline.html
@@ -16,7 +16,7 @@
     <header>
         <div>
             Kewpie
-            <a href="../project7/home.html"><img class="icon" src="images/kewpieicon.png">
+            <a href="../project7/home.html"><img class="icon" src="images/kewpieicon.png" alt="Kewpie icon">
             </a>
         </div>
         
