--- a/project7/rebranding.html
+++ b/project7/rebranding.html
@@ -48,8 +48,7 @@
             <li>There have been other Kewpie brand collaborations such as Tarako Spaghetti.</li>
             <li>There have also been various characters that have adopted the Kewpie look such as
             Disney characters and Japanese anime characters.</li>
-            <li>The Kewpie doll’s popularity can be found on social media platforms such as Instagram,</li>
-            <li>Pinterest, and TikTok, with collectors showing off their meticulously displayed collections and their appreciation for Kewpie dolls.</li>
+            <li>The Kewpie doll’s popularity can be found on social media platforms such as Instagram, <br>Pinterest, and TikTok, with collectors showing off their meticulously displayed collections and their appreciation for Kewpie dolls.</li>
             </ul>
     </div>
 
