--- a/project7/home.html
+++ b/project7/home.html
@@ -62,30 +62,23 @@
 
     <p class="hometext">
         The world of Kewpie dolls is one of wonder and imagination. Kewpie is a character created by famed American illustrator Rose O’Neill in 1909 and they were first featured as illustrations in the magazine Ladies’ Home Journal. O’Neill was the first woman in the United States to create comic strips. The Kewpie figure was depicted among her other original creations in these comic strips. The Kewpie was named after the Roman god of love, Cupid, and they become very popular. The illustrations then led to the creation of Kewpie dolls, which were first made from bisque and then later celluloid. The company Effanbee produced the first hard plastic Kewpie doll. There have also been Kewpie dolls made from softer rubber and vinyl.<br>
-        Other than dolls, there have been:<br>
-        <ul class="homelist">
-            <li>Jell-O</li>
-            <li>Cameras</li>
-            <li>Mayonnaise</li>
-            <li>Door knockers</li>
-            <li>Postcards</li>
-            <li>Greeting cards</li> 
-            <li>Tea sets </li>
-            <li>And other paraphernalia.</li> 
-    
-        </ul>
 
         <table class="kewpietable">
-            <caption>Examples of Kewpie Memorabilia</caption>
+            <caption>Other than dolls, there have been:</caption>
             <tr>
-                <th>Item</th>
-                <th>Price</th>
-                <th>Where to Buy</th>
+                <td>Jell-O</td>
+                <td>Cameras</td>
+                <td>Mayonnaise</td>
             </tr>
             <tr>
-                <td>Mayo</td>
-                <td>$10</td>
-                <td>Supermarket</td>
+                <td>Door knockers</td>
+                <td>Postcards</td>
+                <td>Greeting cards</td>
+            </tr>
+            <tr>
+                <td>Tea sets</td>
+                <td>Car mascots</td>
+                <td>Cookie molds</td>
             </tr>
         </table>
         
