--- a/project7/home.html
+++ b/project7/home.html
@@ -82,7 +82,7 @@
             </tr>
         </table>
         <br>
-        
+
         <div class="roseinfo">
         <div>
             <img class="rose" src="images/roseoneill.jpg" alt="Rose O'Neill">
@@ -97,9 +97,9 @@
 </div>
     <div class="homecontent">
         <div>
-            <figure>
-            <img src="images/illo3.jpg" alt="Votes for Women Kewpie Illustration" id="clickpic" onclick="ClickOff(); ClickOn();"><figcaption>Click for more Kewpie illustrations!</figcaption>
-            </figure>
+        <figure>
+        <img class="voteillo" src="images/illo3.jpg" alt="Votes for Women Kewpie Illustration" id="clickpic" onclick="ClickOff(); ClickOn();"><figcaption>Click for more Kewpie illustrations!</figcaption></figure>
+
         <figure class="hometiktok">
         <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@tinyloophole/video/6857277702693604614" data-video-id="6857277702693604614" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@tinyloophole" href="https://www.tiktok.com/@tinyloophole">@tinyloophole</a> Kewpie History lesson part 1! Like for part 2! ☺️ <a title="kewpies" target="_blank" href="https://www.tiktok.com/tag/kewpies">#kewpies</a> <a title="kewpiedoll" target="_blank" href="https://www.tiktok.com/tag/kewpiedoll">#kewpiedoll</a> <a title="specialinterest" target="_blank" href="https://www.tiktok.com/tag/specialinterest">#specialinterest</a> <a title="kewpietattoo" target="_blank" href="https://www.tiktok.com/tag/kewpietattoo">#kewpietattoo</a> <a title="history" target="_blank" href="https://www.tiktok.com/tag/history">#history</a> <a title="tattooartist" target="_blank" href="https://www.tiktok.com/tag/tattooartist">#tattooartist</a> <a title="tattooapprentice" target="_blank" href="https://www.tiktok.com/tag/tattooapprentice">#tattooapprentice</a> <a title="dolls" target="_blank" href="https://www.tiktok.com/tag/dolls">#dolls</a> <a target="_blank" title="♬ original sound - Abi pop" href="https://www.tiktok.com/music/original-sound-6781041929989081862">♬ original sound - Abi pop</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script><figcaption>A TikTok about the history of Kewpies.</figcaption></figure>
         </div>
